# iroha

./: .clang-format  .clang-format-ignore  .dockerignore  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rustfmt.toml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.lock.orig  Cargo.lock.rej  Cargo.toml  Cargo.toml.rej  Dockerfile  Dockerfile.base  Dockerfile.build  Dockerfile.build.glibc  Dockerfile.ci  Dockerfile.cli  Dockerfile.crypto_cli  Dockerfile.debug  Dockerfile.glibc  Dockerfile.musl  Dockerfile.planner  DockerfileCLI  Doxyfile  HOW-TO-BUILD.md  Jenkinsfile  Jenkinsfile-new  LICENSE  MAINTAINERS.md  README.md  README_DevOps.md  build.gradle  (+39 more)
actor/: Cargo.toml
actor/derive/: Cargo.toml
actor/examples/: broker.rs
actor/src/: actor_id.rs  broker.rs  deadlock.rs  lib.rs
actor/tests/: deadlock.rs
cli/: Cargo.toml  README.md  build.rs
cli/derive/: Cargo.toml
cli/src/: config.rs  event.rs  lib.rs  main.rs  samples.rs  stream.rs  style.rs
client/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  config.json
client/benches/: torii.rs
client/examples/: Cargo.toml.rc13  ClientConfiguration.rs  account_registration.rs  domain_registration_tests.rs  million_accounts_genesis.rs  million_accounts_two_domains_tx.rs  million_accounts_tx.rs  output_filter.rs  register_1000_triggers.rs  ten_million_accounts.rs  tutorial.rs
client/pytests/: .gitignore  README.md
client/src/: client.rs  config.rs  http.rs  http_client.rs  http_default.rs  lib.rs  query.rs  query_builder.rs  samples.rs
client/tests/: genesis.json  million_accounts.rs  mod.rs  reload.rs
client_cli/: Cargo.toml  README.md  build.rs
client_cli/pytests/: .gitignore  README.md  pyproject.toml
client_cli/src/: main.rs
client_cli/tests/: test_config.json
client_config/: Cargo.toml
config/: Cargo.toml  iroha_test_config.json  iroha_test_config.toml
config/base/: Cargo.toml
config/derive/: Cargo.toml
config/proptest-regressions/: client.txt  iroha.txt
config/src/: block_sync.rs  client.rs  client_api.rs  genesis.rs  iroha.rs  kura.rs  lib.rs  live_query_store.rs  log.rs  logger.rs  network.rs  path.rs  queue.rs  runtime_upgrades.rs  snapshot.rs  sumeragi.rs  telemetry.rs  torii.rs  util.rs  wasm.rs  wsv.rs
config/test/: config.toml
config/tests/: fixtures.rs  simple.rs  ui.rs
core/: Cargo.toml  build.rs  config.json  genesis.json
core/benches/: kura.rs  sumeragi.rs  validation.rs
core/docs/: Cargo.toml
core/src/: block.rs  block_sync.rs  config.rs  event.rs  executor.rs  genesis.rs  gossiper.rs  init.rs  kiso.rs  kura.rs  lib.rs  merkle.rs  metrics.rs  p2p.rs  queue.rs  samples.rs  snapshot.rs  state.rs  stream.rs  triggers.rs  tx.rs  validator.rs  wasm.rs  wsv.rs
core/test_network/: Cargo.toml
core/tests/: genesis.json  mod.rs  test_config.json
core/wasm/: Cargo.toml  build.rs
crypto/: Cargo.toml  build.rs
crypto/src/: hash.rs  lib.rs  merkle.rs  multihash.rs  secrecy.rs  signature.rs  varint.rs
crypto_cli/: Cargo.toml  README.md
crypto_cli/src/: main.rs
data_model/: Cargo.toml  build.rs  cbindgen.toml  conversions.txt  kita
data_model/benches/: time_event_filter.rs
data_model/derive/: Cargo.toml
data_model/primitives/: Cargo.toml
data_model/src/: account.rs  asset.rs  block.rs  block_value.rs  config.rs  domain.rs  error.rs  evaluate.rs  events.rs  executor.rs  expression.rs  ffi_encode.rs  fixed.rs  integer.rs  ipfs.rs  isi.rs  lib.rs  merkle.rs  metadata.rs  metrics.rs  name.rs  numeric.rs  pagination.rs  parameter.rs  peer.rs  permission.rs  permissions.rs  predicate.rs  query.rs  role.rs  small.rs  smallstring.rs  smart_contract.rs  sorting.rs  transaction.rs  trigger.rs  uri.rs  validator.rs  visit.rs  wasm.rs
data_model/tests/: data_model.rs  dsl.rs  evaluates_to_serde.rs  test_config.json  trybuild.rs  ui.rs
default_executor/: Cargo.toml  README.md
default_executor/src/: lib.rs
dsl/: Cargo.toml
dsl/examples/: basic.rs
dsl/src/: lib.rs
dsl/tests/: dsl.rs  genesis.json  test_client_config.json  test_config.json
ffi/: Cargo.toml
ffi/.cargo/: config.toml
ffi/derive/: Cargo.toml
ffi/src/: handle.rs  ir.rs  lib.rs  opaque.rs  option.rs  owned.rs  primitives.rs  repr_c.rs  slice.rs  std_impls.rs
ffi/tests/: bindgen_derive.rs  export_getset.rs  export_shared_fns.rs  ffi_bindgen.rs  ffi_export.rs  ffi_export_import_u128_i128.rs  ffi_import.rs  ffi_import_opaque.rs  gen_shared_fns.rs  generics.rs  getset.rs  import_getset.rs  import_shared_fns.rs  transparent.rs  unambiguous.rs
futures/: Cargo.toml
futures/derive/: Cargo.toml
futures/src/: lib.rs  supervisor.rs
futures/tests/: basic.rs
genesis/: Cargo.toml
genesis/src/: lib.rs
iroha/: Cargo.toml  Makefile.toml  README.md  config.json  genesis.json  trusted_peers.json
iroha-cli/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
iroha-cli/impl/: query_response_handler.cpp
iroha-cli/interactive/: CMakeLists.txt  interactive_cli.hpp  interactive_query_cli.hpp  interactive_status_cli.hpp  interactive_transaction_cli.hpp
iroha/benches/: kura.rs  sumeragi.rs  torii.rs  validation.rs
iroha/docs/: Cargo.toml
iroha/examples/: million_accounts_genesis.rs  register_1000_triggers.rs
iroha/src/: account.rs  asset.rs  block.rs  block_sync.rs  bridge.rs  client.rs  config.rs  crypto.rs  dex.rs  domain.rs  event.rs  expression.rs  genesis.rs  init.rs  isi.rs  kura.rs  lib.rs  main.rs  maintenance.rs  merkle.rs  peer.rs  permission.rs  permissions.rs  query.rs  queue.rs  smartcontracts.rs  sumeragi.rs  telemetry.rs  torii.rs  tx.rs  (+3 more)
iroha_actor/: Cargo.toml
iroha_cli/: Cargo.toml  README.md
iroha_client/: Cargo.toml  README.md  config.json
iroha_client_cli/: Cargo.toml  README.md  config.json  signature_condition.json
iroha_client_no_std/: Cargo.toml
iroha_crypto/: Cargo.toml
iroha_crypto_cli/: Cargo.toml
iroha_data_model/: Cargo.toml
iroha_dsl/: Cargo.toml
iroha_futures/: Cargo.toml
iroha_http_server/: Cargo.toml
iroha_logger/: Cargo.toml
(+4860 files in other folders)
