[package]
name = "iroha_actor"
version = "2.0.0-pre-rc.9"
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable deadlock detection
deadlock_detection = ["petgraph"]

[dependencies]
iroha_actor_derive = { version = "=2.0.0-pre-rc.9", path = "derive" }
iroha_logger = { version = "=2.0.0-pre-rc.9", path = "../logger" }
iroha_primitives = { version = "=2.0.0-pre-rc.9", path = "../primitives" }

async-trait = "0.1.57"
once_cell = "1.13.0"
dashmap = "5.3.4"
futures = { version = "0.3.21", default-features = false, features = ["std", "async-await"] }
tokio = { version = "1.20.1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
thiserror = "1.0.32"

petgraph = { version = "0.6", default-features = false, optional = true }
derive_more = "0.99.17"
