[package]
name = "irohad"

edition.workspace = true
version.workspace = true
authors.workspace = true

description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["telemetry", "schema-endpoint"]

# Support lightweight telemetry, including diagnostics
telemetry = ["iroha_telemetry", "iroha_core/telemetry", "iroha_torii/telemetry"]
# Support developer-specific telemetry.
# Should not be enabled on production builds.
# Tokio Console is configured via ENV:
#   https://docs.rs/console-subscriber/0.2.0/console_subscriber/struct.Builder.html#method.with_default_env
dev-telemetry = ["telemetry", "iroha_telemetry/dev-telemetry", "iroha_logger/tokio-console"]
# Support schema generation from the `schema` endpoint in the local binary.
# Useful for debugging issues with decoding in SDKs.
schema-endpoint = ["iroha_torii/schema"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
iroha_core = { workspace = true }
iroha_logger = { workspace = true }
iroha_futures = { workspace = true }
iroha_data_model = { workspace = true, features = ["http"] }
iroha_primitives = { workspace = true }
iroha_telemetry = { workspace = true, optional = true }
iroha_config = { workspace = true }
iroha_crypto = { workspace = true }
iroha_torii = { workspace = true }
iroha_genesis = { workspace = true }
iroha_version = { workspace = true }
iroha_wasm_builder = { workspace = true }

clap = { workspace = true, features = ["derive", "env", "string"] }
eyre = { workspace = true }
error-stack = { workspace = true, features = ["eyre"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
once_cell = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
supports-color = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serial_test = "3.1.1"
tempfile = { workspace = true }
json5 = { workspace = true }
futures = { workspace = true }
path-absolutize = { workspace = true }
assertables = { workspace = true }

[build-dependencies]
iroha_wasm_builder = { workspace = true }
eyre = { workspace = true }

vergen = { workspace = true, features = ["cargo"] }

[package.metadata.cargo-all-features]
denylist = [
    "schema-endpoint",
    "telemetry",
]
skip_optional_dependencies = true
